<resources>
    <string name="app_name">Github User</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_fav">Favorite</string>
    <string name="txt_name">Name</string>
    <string name="txt_location">Location</string>
    <string name="txt_company">Company</string>
    <string name="txt_username">Username</string>
    <string name="txt_following">Following</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_repository">Repository</string>
    <string name="value_follow">0</string>
    <string name="value_place">Not Set</string>
    <string name="txt_follow">Follow</string>
    <string name="txt_unfollow">Unfollow</string>
    <string name="hint_search">Search Username </string>

    <string name="txt_share_profile">Share Profile…</string>

    <string name="txt_toast_network">No Network Connection</string>
    <string name="txt_toast_search">No Network Connection, Cannot Searching</string>
    <string name="txt_toast_fav">Added to Favorite</string>
    <string name="txt_toast_unfav">Removed from Favorite</string>

    <string name="txt_search">Search</string>
    <string name="txt_share">Share</string>
    <string name="txt_setting">Setting</string>

    <string name="key_language">language</string>
    <string name="key_reminder">remind</string>
    <string name="txt_language_title">Change Language</string>
    <string name="txt_reminder_title">Reminder at 9 AM</string>
    <string name="txt_notif_title">Hey you</string>
    <string name="txt_notif_message">Do you already find awesome people today?</string>
</resources>
