<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/txt_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="Favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/txt_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/txt_setting"
        app:showAsAction="always"/>
</menu>